user.css
/* css file for user_view */

.user-container {

	position: relative;

	height: 600px;
	width: 100%;		

	margin-left: auto;	
	margin-right: auto;

}

/* sizing relative to container */

.user-stats {

	position: absolute; 

	height: 500px;
	width: 27%;	
	border: 2px solid #ff9050;
	border-radius: 15px;

	top: 0;
	right: 0;		

	margin-right: 10%;

	float:right;
	background-image: linear-gradient(to right, #df4b4b, #ff9050); 
}

.user-stats h2 {

	margin-left: 20px;	
	text-align: left;
	color: #ffffff;
    font-family: 'Reddit Sans', sans-serif;
}

.clear-right {
	clear: right;	
}

/* sizing relative to container . 

	this is the section/container in
	the center . 		
 
 */

.user-profile-info {

	position: absolute;	

	width: 60%;
	height: 100%;

}


/* sizing relative to profile section */

#user-banner {
	
	position: absolute;
	width: 100%;
	height: 45%;
	border-radius: 15px;
}


/* default behavior for now, replace
with an actual image */	

#user-banner img {
	
	position: absolute;
	height: 100%;	
	width: 100%;
	border-radius: 15px;
	object-fit: cover;

}

/* banner hover pseudo class */

/* pfp*/

/* sizing relative to hirsfhi profile section */

#user-pfp {

	position: relative; 

	height: 140px;
	width: 140px;

	border-radius: 50%;
	border: none;
	box-sizing: border-box;

	margin-top: 20%;
	margin-left: auto;
	margin-right:auto;

}

#user-pfp img {

	height: 100%;
	width: 100%;
	object-fit: cover;
}

/* .user-profile-info-bottom {

	position: absolute; 	

	height: 100%;
	width: 100%;
	margin-top: 120px;	

  --mask:
    radial-gradient(67.08px at 50% 90px,#000 99%,#0000 101%) calc(50% - 60px) 0/120px 100%,
    radial-gradient(67.08px at 50% -60px,#0000 99%,#000 101%) 50% 30px/120px 100% repeat-x;
  -webkit-mask: var(--mask);
          mask: var(--mask);

	background-color: #DCDCDC;
} */

#user-name {

	position: relative; 
	height: 8%;
	width: 100%;

	margin-left: auto;
	margin-right:auto;
}

#user-name h1 {

	text-align: center;	
    font-family: 'Reddit Sans', sans-serif;
		
}

/* relative to info */

.user-bio, .edit-btn {
	display: flex;
  	justify-content: center;
  	align-items: center;
  	height: auto;

}

#bio {

	text-align: center;
    font-family: 'Reddit Sans', sans-serif;
	display: block;
}

#bio.hide{
	display: none;
}


#user-content-space {

	position: absolute;		
	width: 100%;	

}

#edit-profile-btn{
	width: 100px;
    height:40px;
    background-color:white;
    color: rgba(223, 75, 75);
    border-radius:30px;
    margin-top:0%;
    margin-bottom: 0%;
    font-family: 'Reddit Sans', sans-serif; 
    border: 1px solid rgba(223, 75, 75);
	cursor: pointer;
}

#edit-profile-btn.hide{
	display: none;
}

#cancel-btn, #save-btn{
	width: 100px;
    height:40px;
    background-color:white;
    color: rgba(223, 75, 75);
    border-radius:30px;
    margin-top:0%;
    margin-bottom: 0%;
    font-family: 'Reddit Sans', sans-serif; 
    border: 1px solid rgba(223, 75, 75);
	cursor: pointer;
	margin-right: 10px;
	margin-left: 10px;
	display: none;
}

#cancel-btn.show, #save-btn.show{
	display: block;
}

#camera-icon{
	position: absolute;
	top: 8px;
	right: 8px;
	background: #00b7ff;
	color: white;
	border-radius: 50%;
	padding: 6px;
	cursor: pointer;
	font-size: 18px;
	display: none;
}

#camera-icon.show {
  	display: block;
}

#bio-edit{
	width: 100%;
	border-radius: 15px;
	padding: 10px;
	display: none;
	font-family: 'Reddit Sans', sans-serif;
	margin-bottom: 10px;
}

#bio-edit:focus{
    text-align: left;
    border-color: var(--yellow-border);
    outline: none;
    box-sizing: border-box;
    box-shadow: 0 0 20px var(--orange-glow); 
}

#bio-edit.show{
	display: block;
}

